mrr and cvf
